Update to openapi-3.0.yml
