# backend-flask/app.py
@@ -12,7 +12,7 @@ from services.message_groups import *
 from services.messages import *
 from services.create_message import *
 from services.show_activity import *
-from services.user_notifications import *
+
 
 app = Flask(__name__)
 frontend = os.getenv('FRONTEND_URL')
@@ -66,10 +66,6 @@ def data_home():
   data = HomeActivities.run()
   return data, 200
 
-@app.route("/api/activities/notifications", methods=['GET'])
-def data_notifications():
-  data = UserNotifications.run()
-  return data, 200
 
 @app.route("/api/activities/@<string:handle>", methods=['GET'])
 def data_handle(handle):
